--- a/src/index.html
+++ b/src/index.html
@@ -153,8 +153,8 @@
                         <div class="container">
                             <div class="tab_product_card">
                                 <div class="item_circle product_item_circle">
-                                    <div class="img-circle tab_circle"><span class="stroke"><img class="app" src="../src/img/Изображение WhatsApp 2023-10-28 в 17.44.50_09d1c22f.jpg" alt=""></span></div>
-                                    <span class="product_name">Матовые</span>
+                                    <div class="img-circle tab_circle is-active"><span class="stroke"><img class="app" src="../src/img/Изображение WhatsApp 2023-10-28 в 17.44.50_09d1c22f.jpg" alt=""></span></div>
+                                    <span class="product_name is-active">Матовые</span>
                                 </div>
                                 <div class="item_circle product_item_circle">
                                     <div class="img-circle tab_circle"><span class="stroke"><img src="../src/img/Изображение WhatsApp 2023-10-28 в 17.44.50_09d1c22f.jpg" alt=""></span></div>
@@ -526,51 +526,182 @@
                     <div class="container">
                         <div class="section_title">Часто задаваемые вопросы</div>
                         <div class="questions_item">
-                            <span class="arrow"></span>
                             <div class="questions_header">
-                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab, ipsam?</p>
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab, ipsam?
                             </div>
-                            <div class="questions_answers hide">
+                            <div class="questions_answers">
                                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed porro aliquid cumque ex non reiciendis eligendi reprehenderit, veritatis consectetur vitae mollitia, cupiditate sapiente asperiores atque est, fugiat eos soluta labore.</p>
                             </div>
                         </div>
                         <div class="questions_item">
-                            <span class="arrow"></span>
                             <div class="questions_header">
-                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab, ipsam?</p>
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab, ipsam?
                             </div>
-                            <div class="questions_answers hide">
+                            <div class="questions_answers">
                                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed porro aliquid cumque ex non reiciendis eligendi reprehenderit, veritatis consectetur vitae mollitia, cupiditate sapiente asperiores atque est, fugiat eos soluta labore.</p>
                             </div>
                         </div>
                         <div class="questions_item">
-                            <span class="arrow"></span>
                             <div class="questions_header">
-                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab, ipsam?</p>
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab, ipsam?
                             </div>
-                            <div class="questions_answers hide">
+                            <div class="questions_answers">
                                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed porro aliquid cumque ex non reiciendis eligendi reprehenderit, veritatis consectetur vitae mollitia, cupiditate sapiente asperiores atque est, fugiat eos soluta labore.</p>
                             </div>
                         </div>
                         <div class="questions_item">
-                            <span class="arrow"></span>
                             <div class="questions_header">
-                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab, ipsam?</p>
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab, ipsam?
                             </div>
-                            <div class="questions_answers hide">
+                            <div class="questions_answers">
                                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed porro aliquid cumque ex non reiciendis eligendi reprehenderit, veritatis consectetur vitae mollitia, cupiditate sapiente asperiores atque est, fugiat eos soluta labore.</p>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="page"></div>
-    
+                <div class="application_section">
+                   <div class="container">
+                        <div class="section_title"><h2>Оставьте заявку</h2><small><h3>на замер в Москве и получите 4 бесплатные опции</h3></small></div>
+                        <div class="options_block">
+                            <div class="options_item">Выезд замерщика </div>
+                            <div class="options_item">Выезд замерщика </div>
+                            <div class="options_item">Выезд замерщика </div>
+                            <div class="options_item">Выезд замерщика </div>
+                        </div>
+                        <div class="application_input_block">
+                            <div class="phone_block">Позвонить нам по телефону<a href="tel:88008888888">8 800 888 88 88</a></div>
+                            <div class="input_block">
+                                <div class="title_input">Или оствьте данные, и мы перезвоним Вам сами</div>
+                                <form action="#" class="application_form">
+                                    <div class="form_group">
+                                        <label for="application_name" class="application_label">
+                                            <input id="application_name" class="form_control" type="text" placeholder="Ваше имя">
+                                        </label>
+                                        <label for="application_phone" class="application_label">
+                                            <input id="application_phone" class="form_control" type="text" placeholder="Ваш телефон">
+                                        </label>
+                                        <button type="submit" class="main_btn">Оставить заявку</button>
+                                    </div>
+                                    <label class="checkbox_label">
+                                        <input type="checkbox" checked>
+                                        <span class="checkbox"></span>
+                                        <span class="checkbox_text">Согласие на обработку <a class="data" href="#">персональных данных</a></span>
+                                    </label>
+                                </form>
+                            </div>
+                        </div>
+                   </div>
+                </div>
+                <div class="map_section">
+                    <div id="map">
+                        <div class="wrapp_contact_map">
+                            <div class="map_contact_section">
+                                
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </main>
     </div>
    <footer class="main_footer">
-
+     <div class="footer_section">
+        <div class="container">
+            <div class="wrapp_footer_info">
+                <div class="block_info">
+                    <div class="logo"><img src="..\src\img\logo011.svg" alt=""></div>
+                    <div class="block_connection">
+                        <ul class="social_media">
+                            <li><a href="#"><img src="../src/icons/WApp.svg" alt=""></a></li>
+                            <li><a href="#"><img src="../src/icons/TG.svg" alt=""></a></li>
+                            <li><a href="#"><img src="../src/icons/VK.svg" alt=""></a></li>
+                            <li><a href="#"><img src="../src/icons/IG.svg" alt=""></a></li>
+                        </ul>
+                        <div class="number_phone">
+                            <!-- <span class="phone_handset"></span> -->
+                                <div class="flex_phone">
+                                    <a href="tel:88888888888">8 (999) 999 99 99</a>
+                                    <!-- <a href="tel:88888888888">8 (999) 999 99 99</a> -->
+                                </div>
+                        </div>
+                    </div>
+                    <div class="email">
+                        <a href="mailto:vg_ceiling@mail.ru">vg_ceiling@mail.ru</a>
+                    </div>
+                    <a class = "main_btn" href="#">Вызвать замерщика</a>
+                </div>
+                <div class="block_link">
+                    <ul class="footer_menu">
+                        <li class="footer_menu_title">По фактуре</li>
+                            <ul>
+                                <li><a href="">Матовые</a></li>
+                                <li><a href="">Глянцевые</a></li>
+                                <li><a href="">Сатиновые</a></li>
+                                <li><a href="">Тканевые</a></li>
+                            </ul>
+                    </ul>
+                    <ul class="footer_menu">
+                        <li class="footer_menu_title">С подсветкой</li>
+                            <ul>
+                                <li><a href="">Парящие</a></li>
+                                <li><a href="">Световые линии</a></li>
+                                <li><a href="">Контурные</a></li>
+                                <li><a href="">Лайтбокс</a></li>
+                            </ul>
+                    </ul>
+                    <ul class="footer_menu">
+                        <li class="footer_menu_title">Эксклюзивные</li>
+                            <ul>
+                                <li><a href="">Двухуровневые</a></li>
+                                <li><a href="">Теневые</a></li>
+                                <li><a href="">Бесщелевые</a></li>
+                                <li><a href="">Фотопечать</a></li>
+                            </ul>
+                    </ul>
+                    <ul class="footer_menu">
+                        <li class="footer_menu_title">По помещению</li>
+                            <ul>
+                                <li><a href="">В гостиной</a></li>
+                                <li><a href="">В комнате</a></li>
+                                <li><a href="">В зал</a></li>
+                                <li><a href="">На кухне</a></li>
+                                <li><a href="">На кухне</a></li>
+                                <li><a href="">На кухне</a></li>
+                            </ul>
+                    </ul>
+                    <ul class="footer_menu">
+                        <li class="footer_menu_title">Информация</li>
+                            <ul>
+                                <li><a href="">Каталог</a></li>
+                                <li><a href="">Контакты</a></li>
+                                <li><a href="">Цены</a></li>
+                                <li><a href="">Политика конфиденциальности</a></li>
+                            </ul>
+                    </ul>
+                    <ul class="footer_menu">
+                        <li class="footer_menu_title">По фактуре</li>
+                            <ul>
+                                <li><a href="">Матовые</a></li>
+                                <li><a href="">Глянцевые</a></li>
+                                <li><a href="">Сатиновые</a></li>
+                                <li><a href="">Фактурные</a></li>
+                            </ul>
+                    </ul>
+                    <ul class="footer_menu">
+                        <li class="footer_menu_title">По фактуре</li>
+                            <ul>
+                                <li><a href="">Матовые</a></li>
+                                <li><a href="">Глянцевые</a></li>
+                                <li><a href="">Сатиновые</a></li>
+                                <li><a href="">Фактурные</a></li>
+                            </ul>
+                    </ul>
+                </div>
+            </div>
+        </div>
+     </div>
    </footer>
+   
    <script src="js/choices.min.js"></script>
    <script src="js/app.js"></script>
 </body>
