--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
                                     <small>г. Москва и Московская область<span class="schedule"> ежедневно 9:00 20:00</span></small>
                                 </div>
                                 <div class="wrapp_btn_head">
-                                    <a class = "main_btn" href="#">ВЫЗВАТЬ ЗАМЕРЩИКА</a>
+                                    <button data-modal-btn="application-window" class = "main_btn">ВЫЗВАТЬ ЗАМЕРЩИКА</button>
                                     <a class = "main_btn go_calculator" href="#"><img src="../src/icons/calc.webp" alt="">КАЛЬКУЛЯТОР</a>
                                 </div>
                             </div>
@@ -50,64 +50,64 @@
                 <div class="container">
                     <nav class="navigation_wrapp">
                         <ul class="nav_menu">
-                            <li class="nav_item"><a class="is-active" href="#">Главная</a></li>
-                            <li class="nav_item nav_item_hover"><a href="#">Каталог</a>
+                            <li class="nav_item"><a class="link_item is-active" href="#">Главная</a></li>
+                            <li class="nav_item nav_item_hover"><a class="link_item" href="#">Каталог</a>
                                 <span class="parent"></span>
                                 <div class="dropdown-menu">
                                     <div class="dropdown-submenu">
                                         <span class="submenu_title">По фактуре</span>
                                             <ul>
-                                                <li><a href="">Матовые</a></li>
-                                                <li><a href="">Глянцевые</a></li>
-                                                <li><a href="">Сатиновые</a></li>
-                                                <li><a href="">Фактурные</a></li>
+                                                <li><a class="link_submenu" href="D:\Programirovanie\VavisGroup Site sample\src\matovye.html">Матовые</a></li>
+                                                <li><a class="link_submenu" href="#">Глянцевые</a></li>
+                                                <li><a class="link_submenu" href="#">Сатиновые</a></li>
+                                                <li><a class="link_submenu" href="#">Фактурные</a></li>
                                             </ul>
                                     </div>
                                     <div class="dropdown-submenu">
                                         <span class="submenu_title">Эксклюзивные</span>
                                             <ul>
-                                                <li><a href="">Тканевые</a></li>
-                                                <li><a href="">D-Premium</a></li>
-                                                <li><a href="">Clipso</a></li>
+                                                <li><a class="link_submenu" href="#">Тканевые</a></li>
+                                                <li><a class="link_submenu" href="#">D-Premium</a></li>
+                                                <li><a class="link_submenu" href="#">Clipso</a></li>
                                             </ul>
                                     </div>
                                     <div class="dropdown-submenu">
                                         <span class="submenu_title">С подсветкой</span>
                                             <ul>
-                                                <li><a href="">Парящие</a></li>
-                                                <li><a href="">Световые линии</a></li>
-                                                <li><a href="">Лайтбокс</a></li>
-                                                <li><a href="">Контурные</a></li>
-                                                <li><a href="">SLOTT</a></li>
+                                                <li><a class="link_submenu" href="#">Парящие</a></li>
+                                                <li><a class="link_submenu" href="#">Световые линии</a></li>
+                                                <li><a class="link_submenu" href="#">Лайтбокс</a></li>
+                                                <li><a class="link_submenu" href="#">Контурные</a></li>
+                                                <li><a class="link_submenu" href="#">SLOTT</a></li>
                                             </ul>
                                     </div>
                                     <div class="dropdown-submenu">
                                         <span class="submenu_title">По производителю</span>
                                             <ul>
-                                                <li><a href="">MSD</a></li>
-                                                <li><a href="">Pongs</a></li>
-                                                <li><a href="">Descor</a></li>
-                                                <li><a href="">Bauf</a></li>
-                                                <li><a href="">Teqtum</a></li>
+                                                <li><a class="link_submenu" href="#">MSD</a></li>
+                                                <li><a class="link_submenu" href="#">Pongs</a></li>
+                                                <li><a class="link_submenu" href="#">Descor</a></li>
+                                                <li><a class="link_submenu" href="#">Bauf</a></li>
+                                                <li><a class="link_submenu" href="#">Teqtum</a></li>
                                             </ul>  
                                     </div>
                                     <div class="dropdown-submenu">
                                         <span class="submenu_title">По типу помещения</span>
                                             <ul>
-                                                <li><a href="">На кухню</a></li>
-                                                <li><a href="">В коридор</a></li>
-                                                <li><a href="">В ванную</a></li>
-                                                <li><a href="">В спальню</a></li>
-                                                <li><a href="">В детскую</a></li>
-                                                <li><a href="">В гостиную</a></li>
+                                                <li><a class="link_submenu" href="#">На кухню</a></li>
+                                                <li><a class="link_submenu" href="#">В коридор</a></li>
+                                                <li><a class="link_submenu" href="#">В ванную</a></li>
+                                                <li><a class="link_submenu" href="#">В спальню</a></li>
+                                                <li><a class="link_submenu" href="#">В детскую</a></li>
+                                                <li><a class="link_submenu" href="#">В гостиную</a></li>
                                             </ul>
                                     </div>
                                 </div>
                             </li>
-                            <li class="nav_item"><a href="#">Калькулятор</a></li>
-                            <li class="nav_item"><a href="#">Цены</a></li>
-                            <li class="nav_item"><a href="#">Каталог освещения</a></li>
-                            <li class="nav_item"><a href="#">Контакты</a></li>
+                            <li class="nav_item"><a class="link_item" href="#">Калькулятор</a></li>
+                            <li class="nav_item"><a class="link_item" href="#">Цены</a></li>
+                            <li class="nav_item"><a class="link_item" href="#">Каталог освещения</a></li>
+                            <li class="nav_item"><a class="link_item" href="#">Контакты</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -115,11 +115,45 @@
         </header>
         <main class="main_content">
             <div class="main_section">
-                <div class="banner_section">
-                    <div class="container">
-                        <div class="banner_flex_container">
-                            <div class="banner_info_block">
-                                <div class="border_info_block">
+                <div class="wrapper_slider">
+                    <div class="flex_banner">
+                        <div class="banner_section" style="background-image:url(../src/img/banner_one.webp)">
+                            <div class="container">
+                                <div class="banner_flex_container">
+                                    <div class="banner_info_block">
+                                        <div class="border_info_block">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="banner_section" style="background-image:url(../src/img/banner2.png)">
+                            <div class="container">
+                                <div class="banner_flex_container">
+                                    <div class="banner_info_block">
+                                        <div class="border_info_block">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="banner_section" style="background-image:url(../src/img/banner3.png)">
+                            <div class="container">
+                                <div class="banner_flex_container">
+                                    <div class="banner_info_block">
+                                        <div class="border_info_block">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="banner_section" style="background-image:url(../src/img/banner_one.webp)">
+                            <div class="container">
+                                <div class="banner_flex_container">
+                                    <div class="banner_info_block">
+                                        <div class="border_info_block">
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -908,7 +942,7 @@
                     <div class="email">
                         <a href="mailto:vg_ceiling@mail.ru">vg_ceiling@mail.ru</a>
                     </div>
-                    <a class = "main_btn" href="#">Вызвать замерщика</a>
+                    <button data-modal-btn="application-window" class = "main_btn">Вызвать замерщика</button>
                 </div>
                 <div class="block_link">
                     <div class="footer_menu">
@@ -982,7 +1016,7 @@
      </div>
    </footer>
 </div>
-<div class="modal">
+<div data-modal="application-window" class="modal">
     <div class="popup_content">
         <span class="close"></span>
         <div class="section_title">Оставьте заявку<br><small>на замер в Москве и получите 4 бесплатные опции</small></div>
